contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz159615.cpp
struct A {
    int i;
    A operator++() {
        i++;
        return *this;
    }
    A operator->() {
        i++;
        return *this;
    }
};
int main() {
    A a;
    a -> i;
    return 0;
}